adding resurge detail

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="lose stubborn belly fat while you are sleep">
-    <meta property="og:image" content="../images/Resurge 3 Bottles Most Popular.png">
+    <meta
+      name="description"
+      content="lose stubborn belly fat while you are sleep"
+    />
+    <meta
+      property="og:image"
+      content="../images/Resurge 3 Bottles Most Popular.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
@@ -29,9 +35,8 @@
         <section class="header-grid">
           <div class="headline">
             <h1>
-              what is resurge Supplement?
+              Do THIS 1 hour before bed to pee out stubborn fat in the morning
             </h1>
-            <p>The Resurge Supplement is a weight loss pills like no other. This can address weight loss problems by improving sleep deprivation, which is the reason behind Weight Gain.</p>
             <div class="link">
               <a
                 href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -51,17 +56,25 @@
     </header>
     <section class="description">
       <div class="desc container">
-        <h1 class="show-mobile headline-title">how does resurge Supplement works?</h1>
+        <h1 class="show-mobile headline-title">
+          How to pee out stubborn fat in the morning
+        </h1>
         <img
           src="../images/Resurge 6 Bottles Best Value.png"
           alt="resurge supplement 6 bottles"
         />
         <div class="detail">
           <h1 class="show-desktop headline-title">
-            how does resurge Supplement works?
+            How to pee out stubborn fat in the morning
           </h1>
           <p>
-            Resurge is an effective natural supplement that works from the inside, helping you lose weight. By consuming Resurge supplements you will be able to get a deep sleep that will lead to fat burning. This supplement should be taken every evening after dinner to give you a refreshing and necessary sleep for well-being.
+            Recent studies are now showing how a simple tweak to your bedtime
+            ritual can have dramatic effects in shrinking fat tissue while
+            reversing the signs of premature biological aging every time you
+            fall asleep. In fact, Lisa used this 2 minute hack to finally rid
+            herself of 62 lbs of baby weight, which not only resulted in a
+            reversal of Type 2 Diabetes, but also forced her to buy a whole new
+            wardrobe!
           </p>
           <a
             href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -75,10 +88,15 @@
       <div class="detail">
         <h1 class="headline-title">How is this possible?</h1>
         <p>
-          Resurge is a revolutionary supplement that manages to activate the power of metabolism. Even if you sleep you will burn calories and gain more energy, you will sleep better at night and you will have a much stronger psychic.
+          Resurge is a revolutionary supplement that manages to activate the
+          power of metabolism. Even if you sleep you will burn calories and gain
+          more energy, you will sleep better at night and you will have a much
+          stronger psychic.
         </p>
         <p>
-          This Resurge supplement is incredibly useful and improves all the plans of your life, shaping your body, strengthening your mind and giving you all the energy you need to be able to face the challenges.
+          This Resurge supplement is incredibly useful and improves all the
+          plans of your life, shaping your body, strengthening your mind and
+          giving you all the energy you need to be able to face the challenges.
         </p>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -95,7 +113,10 @@
           Gain more confidence and develop a high concentration power.
         </p>
         <p>Reduces food addiction.</p>
-        <p>You benefit from 60 days money back guarantee if the product did not satisfy you.</p>
+        <p>
+          You benefit from 60 days money back guarantee if the product did not
+          satisfy you.
+        </p>
         <p>It has an affordable price</p>
         <p>It is easy to use and consume</p>
         <a
@@ -127,7 +148,10 @@
             You take advantages of 60 days money back guarantee if the product
             did not satisfy you.
           </li>
-          <li>The product offers a feeling of relaxation in the morning by significantly improving sleep</li>
+          <li>
+            The product offers a feeling of relaxation in the morning by
+            significantly improving sleep
+          </li>
           <li>You will benefit from a much deeper sleep</li>
           <li>Resurge balances hormonal imbalances</li>
         </ul>
