Adding How to pee out stubborn fat in the morning Headline

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -35,7 +35,7 @@
         <section class="header-grid">
           <div class="headline">
             <h1>
-              Do THIS 1 hour before bed to pee out stubborn fat in the morning
+              How to pee out stubborn fat in the morning
             </h1>
             <div class="link">
               <a
