adding anather resurge page

--- a/ui/html/resurge-review-1.html
+++ b/ui/html/resurge-review-1.html
@@ -35,7 +35,7 @@
         <section class="header-grid">
           <div class="headline">
             <h1>
-              How to pee out stubborn fat in the morning
+              Avoid this 1 bedtime mistake before bed (huge nightmare)
             </h1>
             <div class="link">
               <a
