--- a/ui/html/resurge-review-1.html
+++ b/ui/html/resurge-review-1.html
@@ -54,55 +54,69 @@
         </section>
       </div>
     </header>
-    <section class="description">
-      <div class="desc container">
-        <h1 class="show-mobile headline-title">
-          How to pee out stubborn fat in the morning
-        </h1>
-        <img
-          src="../images/Resurge 6 Bottles Best Value.png"
-          alt="resurge supplement 6 bottles"
-        />
-        <div class="detail">
-          <h1 class="show-desktop headline-title">
-            How to pee out stubborn fat in the morning
-          </h1>
-          <p>
-            Recent studies are now showing how a simple tweak to your bedtime
-            ritual can have dramatic effects in shrinking fat tissue while
-            reversing the signs of premature biological aging every time you
-            fall asleep. In fact, Lisa used this 2 minute hack to finally rid
-            herself of 62 lbs of baby weight, which not only resulted in a
-            reversal of Type 2 Diabetes, but also forced her to buy a whole new
-            wardrobe!
-          </p>
-          <a
-            href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-            class="btn-danger"
-            >learn more</a
-          >
-        </div>
-      </div>
-    </section>
     <section class="how-it-work container">
       <div class="detail">
-        <h1 class="headline-title">How is this possible?</h1>
+        <h1 class="headline-title">2-Minute Bedtime Habit Overcomes Obesity</h1>
         <p>
-          Resurge is a revolutionary supplement that manages to activate the
-          power of metabolism. Even if you sleep you will burn calories and gain
-          more energy, you will sleep better at night and you will have a much
-          stronger psychic.
+          There's no escape," claims top researcher, John Barban.
         </p>
         <p>
-          This Resurge supplement is incredibly useful and improves all the
-          plans of your life, shaping your body, strengthening your mind and
-          giving you all the energy you need to be able to face the challenges.
+          And after championing real world strategies leading to breakthrough
+          results involving 1000's of the most stubborn of obesity cases over
+          the last 20 years, he would know.
+        </p>
+        <p>
+          "Unfortunately, in this day and age, we deal with a lot more DNA
+          harming factors in our lives than ever before, from social media, to
+          different frequencies of light, to man-made foods."
+        </p>
+        <p>
+          "Every single modern convenience humans have invented has also added
+          additional negative variables that simply CANNOT be accounted for and
+          what makes it worse, these variables CANNOT be avoided, and strategies
+          to overcome them have frankly introduced even more negative issues."
+        </p>
+        <p>
+          Much to the delight of the diet/pharma complex where executive
+          salaries and bonus compensation packages have been rapidly
+          skyrocketing over the last 30 years...
+        </p>
+        <p>
+          "Battling obesity and biological aging is basically impossible with
+          today's current approach and is simply an endless profit center."
+        </p>
+        <p>"However, a new 3-part strategy may hold the key," says Barban.</p>
+        <p>
+          "What if we start with the idea that you can never go back, you cannot
+          avoid, and the ever-changing world as it is IS the new reality that
+          you simply cannot escape?"
+        </p>
+        <p>
+          During this free groundbreaking presentation, Barban builds on this
+          core idea and reveals the proven 3-part strategy that results in a
+          simple 2-minute change to your bedtime ritual that completely reverses
+          obesity, clears and de-wrinkles skin, and lowers your biological age
+          to 10-20 years BELOW your actual age.
+        </p>
+        <p>As for Barban, he laughs at the new reveal:</p>
+        <p>
+          "The funny thing is, if you do this one thing, your body will actually
+          take care of the rest. It's strange. Cravings, disease, obesity,
+          premature aging, even many issues in mental health are showing to
+          completely resolve ON THEIR OWN. This is the lynchpin no one is
+          talking about."
         </p>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
           class="btn-danger"
-          >learn more</a
+          >>> Do NOT AVOID this 2-minute bedtime ritual</a
         >
+        <p>
+          While the total effects of this new method will vary from person to
+          person depending on how much harm each person's DNA has accumulated,
+          Barban advises all adults to arm themselves with this groundbreaking
+          information.
+        </p>
       </div>
       <div class="detail">
         <h1 class="headline-title">Why Should You Buy Resurge?</h1>
