--- a/ui/html/resurge-reviews.html
+++ b/ui/html/resurge-reviews.html
@@ -7,6 +7,21 @@
       name="description"
       content="lose stubborn belly fat while you are sleep"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-167732881-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-167732881-1");
+    </script>
+
     <meta
       property="og:image"
       content="../images/Resurge 3 Bottles Most Popular.png"
@@ -40,7 +55,8 @@
             <div class="link">
               <a
                 href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-                class="btn-danger"
+                class="btn-danger click-tracking-ga"
+                data-ga-id="video click convasion Shrink"
                 >watch video</a
               >
             </div>
@@ -84,7 +100,8 @@
           </p>
           <a
             href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-            class="btn-danger"
+            class="btn-danger click-tracking-ga"
+            data-ga-id="next link1"
             >learn more</a
           >
         </div>
@@ -106,7 +123,8 @@
         </p>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-          class="btn-danger"
+          class="btn-danger click-tracking-ga"
+          data-ga-id="next link2"
           >learn more</a
         >
       </div>
@@ -127,7 +145,8 @@
         <p>It is easy to use and consume</p>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-          class="btn-danger action-btn"
+          class="btn-danger action-btn click-tracking-ga"
+          data-ga-id="FAQs link"
           >VIEW RESURGE FAQs</a
         >
       </div>
@@ -163,7 +182,8 @@
         </ul>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-          class="btn-danger"
+          class="btn-danger click-tracking-ga"
+          data-ga-id="call to action convasion"
           >Buy now from official website</a
         >
       </div>
@@ -192,5 +212,16 @@
         </ul>
       </div>
     </footer>
+    <script>
+      document.addEventListener("click", (e) => {
+        if (!e.target.classList.contains("click-tracking-ga")) {
+          return;
+        }
+        gtag("event", "clicks", {
+          event_category: `${e.target.getAttribute("data-ga-id")}`,
+          event_action: "Clicked",
+        });
+      });
+    </script>
   </body>
 </html>
