adding Video call to action button

--- a/ui/html/resurge-reviews.html
+++ b/ui/html/resurge-reviews.html
@@ -56,7 +56,7 @@
               <a
                 href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
                 class="btn-danger click-tracking-ga"
-                data-ga-id="video click convasion Shrink"
+                data-ga-id="Video call to action"
                 >watch video</a
               >
             </div>
