adding affliate link

--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -451,7 +451,10 @@
           </div>
         </div>
         <div class="convert-link">
-          <a href="#" class="convasion-bottom-link">
+          <a
+            href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+            class="convasion-bottom-link"
+          >
             <h3>Skip The Quiz - I Connected With Your Story</h3>
             <p>*CLICK HERE*</p>
           </a>
@@ -472,9 +475,9 @@
             />
           </div>
           <div class="footer-link">
-            <a href="#">Terms of service</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Contact us</a>
+            <a href="./terms-and-condition.html">Terms of service</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
+            <a href="./contact.html">Contact us</a>
           </div>
           <div class="copyright">
             <p>
@@ -509,7 +512,7 @@
           >
           <p class="good-news">Amazing news... you're a perfect fit</p>
           <div class="model-btn">
-            <a href="#"
+            <a href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
               ><span class="inner-model-btn1"
                 >*CLICK HERE* - SHOW ME THE AFTER DINNER RITUAL</span
               >
