--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../images/love_heart16.png" />
     <link rel="stylesheet" href="../css/lander.css" />
+    <script
+      src="https://kit.fontawesome.com/304b37b063.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -33,16 +37,8 @@
             </h1>
             <div class="underline"></div>
             <p>
-              You're more than welcome to jump straight into the quiz like I
-              did,<b>
-                <u>
-                  but we'd love for you to read our story below first...</u
-                ></b
-              >
-              A key factor of our journey was knowing how much Charlotte and
-              John had struggled and seeing the change they went through. I'm
-              hoping our story will do the same for you (then you can always
-              quickly scroll back up to the quiz afterwards) :)x
+              (It's best to read my story below FIRST, then scroll back up to
+              take the quiz...)
             </p>
           </div>
         </header>
@@ -540,6 +536,7 @@
             >
           </div>
           <p class="security">
+            <span><i class="fas fa-lock"></i></span>
             Your results are secure and will never be shared with anyone.
           </p>
           <span class="close-model">x</span>
