closing model by outside

--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -535,11 +535,10 @@
               ></a
             >
           </div>
-          <p class="security">
+          <p class="security" style="margin-top: 1rem;">
             <span><i class="fas fa-lock"></i></span>
             Your results are secure and will never be shared with anyone.
           </p>
-          <span class="close-model">x</span>
         </div>
       </div>
     </div>
