--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -516,7 +516,7 @@
         </div>
       </footer>
       <div class="model-bg">
-        <div class="model">
+        <div class="model w3-animate-top">
           <b class="model-title"
             >YOUR RESULTS HAVE BEEN <br />
             ANALYZED</b
