--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -253,11 +253,7 @@
             </div>
             <div class="col-right">
               <div class="image-right-container">
-                <img
-                  src="../images/Resurge-image-D5.jpg"
-                  class="img-right"
-                  alt=""
-                />
+                <img src="../images/water2.jpg" class="img-right" alt="" />
               </div>
             </div>
           </div>
