--- a/ui/html/resurge-review-2.html
+++ b/ui/html/resurge-review-2.html
@@ -62,10 +62,7 @@
             </div>
           </div>
           <div class="img-headline">
-            <img
-              src="../images/Resurge 3 Bottles Most Popular.png"
-              alt="Resurge 3 Bottles"
-            />
+            <img src="../images/water2.jpg" alt="Resurge 3 Bottles" />
           </div>
         </section>
       </div>
@@ -76,7 +73,7 @@
           How to pee out stubborn fat in the morning
         </h1>
         <img
-          src="../images/Resurge 6 Bottles Best Value.png"
+          src="../images/Resurge-image-D5.jpg"
           alt="resurge supplement 6 bottles"
         />
         <div class="detail">
