--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../images/love_heart16.png" />
-    <link rel="stylesheet" href="../css/lander.css" />
+    <link rel="stylesheet" media="screen" href="../css/lander.css" />
     <script
+      async
       src="https://kit.fontawesome.com/304b37b063.js"
       crossorigin="anonymous"
     ></script>
@@ -253,7 +254,11 @@
             </div>
             <div class="col-right">
               <div class="image-right-container">
-                <img src="../images/Resurge-image-D5.jpg" class="img-right" alt="" />
+                <img
+                  src="../images/Resurge-image-D5.jpg"
+                  class="img-right"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -512,7 +517,7 @@
         </div>
       </footer>
       <div class="model-bg">
-        <div class="model w3-animate-top">
+        <div class="model">
           <b class="model-title"
             >YOUR RESULTS HAVE BEEN <br />
             ANALYZED</b
