--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../images/love_heart16.png" />
+    <link rel="preload" href="../css/lander.css" as="style" />
+    <link rel="stylesheet" href="../js/index.js" as="script" />
     <link rel="stylesheet" media="screen" href="../css/lander.css" />
     <script
       async
