--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -6,7 +6,18 @@
     <link rel="icon" href="../images/love_heart16.png" />
     <link rel="preload" href="../css/lander.css" as="style" />
     <link rel="preload" href="../js/index.js" as="script" />
-    <link rel="stylesheet" media="screen" href="../css/lander.css" />
+    <link rel="stylesheet" href="../css/lander.css" />
+    <link
+      rel="preload"
+      href="../css/mobile.css"
+      media="screen and (max-width: 800px)"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="../css/mobile.css"
+      media="screen and (max-width: 800px)"
+    />
     <script
       async
       src="https://kit.fontawesome.com/304b37b063.js"
