adding srcset and sizes attribute to the image

--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -268,6 +268,11 @@
             <div class="col-right">
               <div class="image-right-container">
                 <img
+                  srcset="
+                    ../images/Resurge-image-D5-min.jpg 480w,
+                    ../images/Resurge-image-D5.jpg     800w
+                  "
+                  sizes="(max-width: 600px) 480px,800px"
                   src="../images/Resurge-image-D5.jpg"
                   class="img-right"
                   alt=""
@@ -339,7 +344,15 @@
             in the mirror and hated it.
           </p>
           <div class="inner-image">
-            <img src="../images/Women-in-Mirror.jpg" alt="women in mirror" />
+            <img
+              srcset="
+                ../images/Women-in-Mirror.jpg 480w,
+                ../images/Women-in-Mirror.jpg 800w
+              "
+              sizes="(max-width: 600px) 480px,800px"
+              src="../images/Women-in-Mirror.jpg"
+              alt="women in mirror"
+            />
           </div>
           <p>
             But I never knew why because we’d earnt all the treats we could
@@ -361,7 +374,12 @@
             show!
           </p>
           <div class="inner-image">
-            <img src="../images/person.jpg" alt="person" />
+            <img
+              srcset="../images/person-min.jpg 480w, ../images/person.jpg 800w"
+              sizes="(max-width: 600px) 480px,800px"
+              src="../images/person.jpg"
+              alt="person"
+            />
           </div>
           <p>
             I tried blaming the baby weight I gained, even though that’s only a
@@ -401,7 +419,15 @@
             with us!
           </p>
           <div class="inner-image">
-            <img src="../images/Resurge-image-D5.jpg" alt="img" />
+            <img
+              srcset="
+                ../images/Resurge-image-D5-min.jpg 480w,
+                ../images/Resurge-image-D5.jpg     800w
+              "
+              sizes="(max-width: 600px) 480px,800px"
+              src="../images/Resurge-image-D5.jpg"
+              alt="img"
+            />
           </div>
           <p>
             And it turns out taking this quick quiz was the pivotal moment that
@@ -495,6 +521,11 @@
           </div>
           <div class="logo">
             <img
+              srcset="
+                ../images/weight-loss-and-health-motivation-min.png 480w,
+                ../images/weight-loss-and-health-motivation.png     800w
+              "
+              sizes="(max-width: 600px) 480px,800px"
               src="../images/weight-loss-and-health-motivation.png"
               alt="logo"
             />
