--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -260,7 +260,12 @@
             </div>
             <div class="arrow">
               <img
-                src="../images/Up-arrows.png"
+                srcset="
+                  ../images/Up-arrows-min.png 480w,
+                  ../images/Up-arrows-min.png 800w
+                "
+                sizes="(max-width: 600px) 480px,800px"
+                src="../images/Up-arrows-min.png"
                 alt="arrow"
                 class="direction"
               />
