--- a/ui/html/after-dinner-what-next.html
+++ b/ui/html/after-dinner-what-next.html
@@ -262,10 +262,10 @@
               <img
                 srcset="
                   ../images/Up-arrows-min.png 480w,
-                  ../images/Up-arrows-min.png 800w
+                  ../images/Up-arrows.png     800w
                 "
                 sizes="(max-width: 600px) 480px,800px"
-                src="../images/Up-arrows-min.png"
+                src="../images/Up-arrows.png"
                 alt="arrow"
                 class="direction"
               />
@@ -351,8 +351,8 @@
           <div class="inner-image">
             <img
               srcset="
-                ../images/Women-in-Mirror.jpg 480w,
-                ../images/Women-in-Mirror.jpg 800w
+                ../images/Women-in-Mirror-min.jpg 480w,
+                ../images/Women-in-Mirror.jpg     800w
               "
               sizes="(max-width: 600px) 480px,800px"
               src="../images/Women-in-Mirror.jpg"
