resolve rendering issue

--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="./simple.css" as="style" />
     <link rel="stylesheet" href="simple.css" />
+
+    <link
+      rel="preload"
+      href="./resur-mobile.css"
+      media="screen and (max-width: 990px)"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="./resur-mobile.css"
+      media="screen and (max-width: 990px)"
+    />
     <script
+      async
       src="https://kit.fontawesome.com/304b37b063.js"
       crossorigin="anonymous"
     ></script>
