--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-167732881-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-167732881-1");
+    </script>
     <link rel="preload" href="./simple.css" as="style" />
     <link rel="stylesheet" href="simple.css" />
 
@@ -225,7 +239,8 @@
             </p>
             <a
               href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
-              class="convert-button"
+              class="convert-button click-tracking-ga"
+              data-ga-id="resurge convasion button"
             >
               <p class="convert">i agree to watch</p>
             </a>
@@ -273,5 +288,16 @@
       </div>
     </footer>
     <script src="simple.js"></script>
+    <script>
+      document.addEventListener("click", (e) => {
+        if (!e.target.classList.contains("click-tracking-ga")) {
+          return;
+        }
+        gtag("event", "clicks", {
+          event_category: `${e.target.getAttribute("data-ga-id")}`,
+          event_action: "Clicked",
+        });
+      });
+    </script>
   </body>
 </html>
