--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -19,6 +19,7 @@
     </script>
     <link rel="preload" href="./simple.css" as="style" />
     <link rel="stylesheet" href="simple.css" />
+    <link rel="icon" href="./images/love_heart16.png" />
 
     <link
       rel="preload"
@@ -36,7 +37,7 @@
       src="https://kit.fontawesome.com/304b37b063.js"
       crossorigin="anonymous"
     ></script>
-    <title>After Dinner Ritual Test</title>
+    <title>Simple After Dinner Ritual Test</title>
   </head>
   <body>
     <header class="top-header">
