Adding leads page tracking code

--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Leadquizzes 3 tracking script -->
+<script src='https://lq3-production01.s3.amazonaws.com/lead_quizzes_3.0/tracking/js/properties/8pzoply6lu2jna.js'></script>
+<!-- End of Leadquizzes 3 script -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
