--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
       name="description"
       content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation"
     />
+    <script data-ad-client="ca-pub-1222318581530261" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="icons asset/css/all.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
