--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,11 @@
       name="description"
       content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation"
     />
-    <script data-ad-client="ca-pub-1222318581530261" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script
+      data-ad-client="ca-pub-1222318581530261"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <link rel="stylesheet" href="icons asset/css/all.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
@@ -38,7 +42,7 @@
           <div class="col d-flex align-items-center">
             <p class="mb-0 phone">
               <span class="mailus">Phone no:</span>
-              <a href="tel://250 78309038494">+250 78309038494</a> or
+              <a href="tel://250 782346378">+250782346378</a> or
               <span class="mailus">email us:</span>
               <a
                 href="mailto:support@weightlossandhealthmotivation.com"
