--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Leadquizzes 3 tracking script -->
-<script src='https://lq3-production01.s3.amazonaws.com/lead_quizzes_3.0/tracking/js/properties/8pzoply6lu2jna.js'></script>
-<!-- End of Leadquizzes 3 script -->
+    <script src="https://lq3-production01.s3.amazonaws.com/lead_quizzes_3.0/tracking/js/properties/8pzoply6lu2jna.js"></script>
+    <!-- End of Leadquizzes 3 script -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -43,6 +43,17 @@
     <title>Simple After Dinner Ritual Test</title>
   </head>
   <body>
+    <div
+      id="inline-embed-iframe"
+      class="inline-embed-responsive"
+      style="border-radius: 5px; overflow: hidden;"
+    >
+      <iframe
+        src="https://content.leadquizzes.com/lp/08HXn9t2ew?embed=1"
+        frameborder="0"
+        style="width: 100%; float: left;"
+      ></iframe>
+    </div>
     <header class="top-header">
       <div class="container logo-container">
         <a class="logo" style="cursor: pointer;"
