correcting leads quiz path code CTA

--- a/ui/simpleQuiz.html
+++ b/ui/simpleQuiz.html
@@ -54,6 +54,10 @@
         style="width: 100%; float: left;"
       ></iframe>
     </div>
+    <div
+      class="leadquizzes-embed-cta leadquizzes-content-slug-metabolism-type-quiz-185"
+    ></div>
+    <!-- TESTING LEADS -->
     <header class="top-header">
       <div class="container logo-container">
         <a class="logo" style="cursor: pointer;"
