--- a/ui/metabolismQuiz.html
+++ b/ui/metabolismQuiz.html
@@ -22,6 +22,11 @@
       gtag("config", "UA-167732881-1");
     </script>
     <link rel="icon" href="./images/love_heart16.png" />
+    <meta
+      property="og:description"
+      content="Finding out your metabolic type could be the biggest step you make towards having the body you’ve always wanted!"
+    />
+    <meta property="og:image" content="./images/metab.jpg" />
   </head>
   <body>
     <div
