--- a/ui/metabolismQuiz.html
+++ b/ui/metabolismQuiz.html
@@ -26,7 +26,10 @@
       property="og:description"
       content="Finding out your metabolic type could be the biggest step you make towards having the body you’ve always wanted!"
     />
-    <meta property="og:image" content="./images/metab.jpg" />
+    <meta
+      property="og:image"
+      content="https://img.playbuzz.com/image/upload/ar_1.5,c_pad,f_jpg,b_auto/q_auto:good,f_auto,fl_lossy,w_480,c_limit/cdn/116b9ae4-47aa-4442-b320-0d9dc2a127a4/f9f4e290-5594-4290-99d2-20655f0f7182_560_420.jpg"
+    />
   </head>
   <body>
     <div
