--- a/ui/quiz-what-your-metabolism-type.html
+++ b/ui/quiz-what-your-metabolism-type.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Methabolism Quiz</title>
+    <title>Quiz: What’s Your Metabolism Type?</title>
     <!-- Leadquizzes 3 tracking script -->
     <script src="https://lq3-production01.s3.amazonaws.com/lead_quizzes_3.0/tracking/js/properties/8pzoply6lu2jna.js"></script>
     <!-- End of Leadquizzes 3 script -->
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://img.playbuzz.com/image/upload/ar_1.5,c_pad,f_jpg,b_auto/q_auto:good,f_auto,fl_lossy,w_480,c_limit/cdn/116b9ae4-47aa-4442-b320-0d9dc2a127a4/f9f4e290-5594-4290-99d2-20655f0f7182_560_420.jpg"
+      content="https://i.ibb.co/tsKG24j/virus-image-resized.jpg"
     />
   </head>
   <body>
