--- a/ui/quiz-what-your-metabolism-type.html
+++ b/ui/quiz-what-your-metabolism-type.html
@@ -26,6 +26,8 @@
       property="og:description"
       content="Finding out your metabolic type could be the biggest step you make towards having the body you’ve always wanted!"
     />
+    <link rel="preload" href="./simple.css" as="style" />
+    <link rel="stylesheet" href="simple.css" />
     <meta
       property="og:image"
       content="https://i.ibb.co/tsKG24j/virus-image-resized.jpg"
@@ -43,5 +45,44 @@
         style="width: 100%; float: left;"
       ></iframe>
     </div>
+    <footer>
+      <div class="content">
+        <div class="warning-title">
+          <p>
+            <b>PLEASE NOTE:</b> If you click away from this page your quiz data
+            will be lost.
+          </p>
+        </div>
+
+        <div class="footer-link">
+          <a href="./html/terms-and-condition.html">Terms of service</a>
+          <a href="./html/privacy-policy.html">Privacy Policy</a>
+          <a href="./html/contact.html">Contact us</a>
+        </div>
+        <div class="copyright">
+          <p>
+            Copyright © 2020 - weight loss and health motivation? - All Rights
+            Reserved.
+          </p>
+        </div>
+      </div>
+      <div class="disclaimer">
+        <p class="p1">
+          This site is not a part of the Facebook website or Facebook Inc.
+          Additionally, this site is NOT endorsed by Facebook in any way.
+          FACEBOOK is a trademark of FACEBOOK, Inc.
+        </p>
+        <p>
+          <span>Disclaimer:</span>
+          The information on this website has not been evaluated by the Food &
+          Drug Administration or any other medical body. We do not aim to
+          diagnose, treat, cure or prevent any illness or disease. Information
+          is shared for educational purposes only. You should always consult
+          your doctor before acting on any content on this website, especially
+          if you are pregnant, nursing, taking medication or have a medical
+          condition.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
