adding contact number and email

--- a/ui/html/contact.html
+++ b/ui/html/contact.html
@@ -28,7 +28,16 @@
 			<div class="container">
 				<div class="row justify-content-between contact-header">
 						<div class="col d-flex align-items-center">
-							<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="tel://250782346378">+250 782346378</a> or <span class="mailus">email us:</span> <a href="mailto:support@weightlossandhealthmotivation.com" title="weight loss and health motivation email">here</a></p>
+							<p class="mb-0 phone">
+								<span class="mailus">Phone no:</span>
+								<a href="tel://250 729095548">+250729095548</a> or
+								<span class="mailus">email us:</span>
+								<a
+								  href="mailto:gilbelt@weightlossandhealthmotivation.com"
+								  title="weight loss and health motivation email"
+								  >here</a
+								>
+							  </p>
 						</div>
 						<div class="col d-flex justify-content-end">
 							<div class="social-media">
