--- a/ui/index.html
+++ b/ui/index.html
@@ -43,10 +43,10 @@
           <div class="col d-flex align-items-center">
             <p class="mb-0 phone">
               <span class="mailus">Phone no:</span>
-              <a href="tel://250 782346378">+250782346378</a> or
+              <a href="tel://250 729095548">+250729095548</a> or
               <span class="mailus">email us:</span>
               <a
-                href="mailto:support@weightlossandhealthmotivation.com"
+                href="mailto:gilbelt@weightlossandhealthmotivation.com"
                 title="weight loss and health motivation email"
                 >here</a
               >
