--- a/ui/ProvenReview.html
+++ b/ui/ProvenReview.html
@@ -28,6 +28,8 @@
 
       "
     />
+    <link rel="icon" href="./images/favicon-wlht.png" />
+    
     <link rel="preload" href="./proven.css" as="style" />
 
     <link rel="stylesheet" href="proven.css" />
