--- a/ui/meticore-supplement-reviews.html
+++ b/ui/meticore-supplement-reviews.html
@@ -413,8 +413,8 @@
             due to the antioxidants and vitamins found in these supplements.
           </p>
           <div class="a-cont">
-            <a href="https://fbd607vdl9-n6k18mr2f1uud8v.hop.clickbank.net/">
-              <img src="./Nutravesta-small-cta-02-696x180.png" alt="" />
+            <a href="https://9218efodp8xe0o8lfnlbzluya4.hop.clickbank.net/">
+              <h1>>>>>>buy from official website</h1>
             </a>
           </div>
         </div>
